# JogoV1

./: .gitignore  CMakeLists.txt  JogoV1.sln  README.md  authors.txt
JogoV1/: Animacao.cpp  Animacao.h  BackGround.cpp  BackGround.h  Caveira.cpp  Caveira.h  Elemento.cpp  Elemento.h  Ente.cpp  Ente.h  Entidade.cpp  Entidade.h  Espinho.cpp  Espinho.h  Fase.cpp  Fase.h  Fase1.cpp  Fase1.h  Fase2.cpp  Fase2.h  GerenciadorColisoes.cpp  GerenciadorColisoes.h  GerenciadorGrafico.cpp  GerenciadorGrafico.h  GerenciadorMenus.cpp  GerenciadorMenus.h  GerenciadorPrototipo.h  Gosma.cpp  Gosma.h  Inimigo.cpp  Inimigo.h  Jogador.cpp  Jogador.h  Jogo.cpp  Jogo.h  JogoV1.vcxproj  JogoV1.vcxproj.filters  Lista.cpp  Lista.h  ListaEntidades.cpp  (+40 more)
